# umc

./: CMakeLists.txt  README.md  SZ3_CMakeLists.txt  build_script.sh
data/Katrina/: attr0.dat.0  attr0.dat.1  attr0.dat.10  attr0.dat.100  attr0.dat.101  attr0.dat.102  attr0.dat.103  attr0.dat.104  attr0.dat.105  attr0.dat.106  attr0.dat.107  attr0.dat.108  attr0.dat.109  attr0.dat.11  attr0.dat.110  attr0.dat.111  attr0.dat.112  attr0.dat.113  attr0.dat.114  attr0.dat.115  attr0.dat.116  attr0.dat.117  attr0.dat.118  attr0.dat.119  attr0.dat.12  attr0.dat.120  attr0.dat.121  attr0.dat.122  attr0.dat.123  attr0.dat.124  attr0.dat.125  attr0.dat.126  attr0.dat.127  attr0.dat.128  attr0.dat.129  attr0.dat.13  attr0.dat.130  attr0.dat.131  attr0.dat.132  attr0.dat.133  (+122 more)
data/Tsunami/: bathy.dat.0  height.dat.0  momentumX.dat.0  momentumY.dat.0  velocityY.dat.0
env/: collect_environment.sh  environment.txt
include/: adjacent_prediction.hpp  comp_decomp_cp_preserve.hpp  compress.hpp  cp_preservation.hpp  decompress.hpp  kriging_interpolation.hpp  partition.hpp  regression.hpp  reorder.hpp  set_decomposition.hpp  sz_huffman.hpp  utils.hpp
parallel_src/: CMakeLists.txt  mpas_idw.hpp  mpas_parutils.hpp  mpas_reorder.hpp  par_compress_decompress.hpp  test_par_compress.cpp  test_par_decompress.cpp  test_partition.cpp
test/: CMakeLists.txt  test_comp_decomp_cp.cpp  test_compress.cpp  test_decompress.cpp  test_reorder.cpp
