cmake_minimum_required (VERSION 3.0)
project(UMC VERSION 0.0.0.1)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-g -O3") 

find_package(GSL REQUIRED) 
find_path(METIS_INCLUDE_DIR NAMES metis.h)
find_library(METIS_LIBRARY NAMES metis)
find_package(SZ3 REQUIRED)
find_package(PkgConfig)
pkg_search_module(ZSTD IMPORTED_TARGET libzstd)

add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE include)
target_include_directories(${PROJECT_NAME} INTERFACE ${METIS_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} INTERFACE ${METIS_LIBRARY} GSL::gsl SZ3::SZ3)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ DESTINATION include)
add_subdirectory (test)