cmake_minimum_required (VERSION 3.0)
project(UMC VERSION 0.0.0.1)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-g -O3") 

set (GSL_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external/gsl-2.7.1/gsl")
set (GSL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external/gsl-2.7.1/gsl")
find_package(GSL REQUIRED)
find_path(METIS_INCLUDE_DIR NAMES metis.h PATHS "${CMAKE_CURRENT_SOURCE_DIR}/external/metis-5.1.0/install/include")
find_library(METIS_LIBRARY NAMES metis PATHS "${CMAKE_CURRENT_SOURCE_DIR}/external/metis-5.1.0/install/lib")
find_package(ftk REQUIRED HINTS "${CMAKE_CURRENT_SOURCE_DIR}/external/ftk/install/lib/cmake/FTK")
find_package(SZ3 REQUIRED HINTS "${CMAKE_CURRENT_SOURCE_DIR}/external/SZ3/install/lib/cmake/SZ3")
find_package(PkgConfig)
pkg_search_module(ZSTD IMPORTED_TARGET libzstd)

add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE include)
target_include_directories(${PROJECT_NAME} INTERFACE ${METIS_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} INTERFACE ${METIS_LIBRARY} GSL::gsl SZ3::SZ3 FTK::libftk)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ DESTINATION include)
add_subdirectory (test)